--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,24 @@
-{"meta":{"username":"miroque","repositoryName":"shirokuma","branch":"gh-pages"},"site":{"title":"Shirokuma's Roar","description":"Блог немножко о том немножко о сем. Но в целом, о том как я программирую.","logo":"http://icons.iconarchive.com/icons/elegantthemes/beautiful-flat/48/aperture-icon.png","cover":"https://static.pexels.com/photos/64769/pexels-photo-64769.jpeg","googleAnalytics":"UA-7648010-8","disqus":"shirokumasroar","url":"https://miroque.github.io/shirokuma"},"socialnetwork":{"email":"i.miroque@gmail.com","twitter":"https://twitter.com/i_miroque","linkedin":"https://www.linkedin.com/profile/view?id=AAMAAAQA6h8Bm8x0dfXeMc4QpzGc0KubXneYNN4&trk=hp-identity-name","github":"https://github.com/miroque/"},"theme":{"name":"Casper","url":"//miroque.github.io/shirokuma/themes/Casper"}}
+{
+  "meta": {
+    "username": "miroque",
+    "repositoryName": "shirokuma",
+    "branch": "gh-pages"
+  },
+  "site": {
+    "title": "Shirokuma's Roar",
+    "description": "Блог немножко о том немножко о сем. Но в целом, о том как я программирую.",
+    "logo": "http://icons.iconarchive.com/icons/elegantthemes/beautiful-flat/48/aperture-icon.png",
+    "cover": "https://static.pexels.com/photos/64769/pexels-photo-64769.jpeg",
+    "googleAnalytics": "UA-7648010-8",
+    "disqus": "shirokumasroar"
+  },
+  "socialnetwork": {
+    "email": "i.miroque@gmail.com",
+    "twitter": "https://twitter.com/i_miroque",
+    "linkedin": "https://www.linkedin.com/profile/view?id=AAMAAAQA6h8Bm8x0dfXeMc4QpzGc0KubXneYNN4&trk=hp-identity-name",
+    "github": "https://github.com/miroque/"
+  },
+  "theme": {
+    "name": "saga"
+  }
+}
