Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -28,7 +28,7 @@
     "stackoverflow": "http://stackoverflow.com/users/1679702/miroque"
   },
   "theme": {
-    "name": "ghostium"
+    "name": "uno-zen"
   },
   "urls": {
     "site": "https://miroque.github.io/shirokuma",
