--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -8,8 +8,8 @@
   "site": {
     "title": "Shirokuma's Roar",
     "description": "Блог немножко о том немножко о сем. Но в целом, о том как я программирую.",
-    "logo": "http://icons.iconarchive.com/icons/elegantthemes/beautiful-flat/48/aperture-icon.png",
-    "cover": "https://static.pexels.com/photos/64769/pexels-photo-64769.jpeg",
+    "logo": "",
+    "cover": "",
     "googleAnalytics": "UA-7648010-8",
     "disqus": "shirokumasroar",
     "delay": "",
