--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -8,7 +8,7 @@
   "site": {
     "title": "Shirokuma's Roar",
     "description": "Блог немножко о том немножко о сем. Но в целом, о том как я программирую.",
-    "logo": "",
+    "logo": "http://icons.iconarchive.com/icons/hopstarter/sleek-xp-basic/32/Document-Blank-icon.png",
     "cover": "",
     "googleAnalytics": "UA-7648010-8",
     "disqus": "shirokumasroar",
